--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="cu_splash_bg">#623F91</color>
+    <color name="cu_bottom_icon_checked">#66318B</color>
+    <color name="cu_bottom_icon_unchecked">#969696</color>
+    <color name="cu_text">#1A1A1A</color>
+
 </resources>
