2주차 과제 - (포켓CU) - bottom_nav, fragment연결, home

--- a/app/src/main/res/menu/cu_menu.xml
+++ b/app/src/main/res/menu/cu_menu.xml
@@ -18,6 +18,12 @@
         android:title="MY CU" />
 
     <item
+        android:id="@+id/cu_blank"
+        android:enabled="false"
+        app:showAsAction="ifRoom"
+        android:title="" />
+
+    <item
         android:id="@+id/cu_coupon"
         android:enabled="true"
         app:showAsAction="ifRoom"
