--- a/app/src/main/res/layout/activity_cu_bottom_nav.xml
+++ b/app/src/main/res/layout/activity_cu_bottom_nav.xml
@@ -7,15 +7,12 @@
     <FrameLayout
         android:id="@+id/cu_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/cu_bottom_nav"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
+    </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/cu_bottom_nav"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/white"
         app:labelVisibilityMode="labeled"
@@ -27,5 +24,23 @@
         app:menu="@menu/cu_menu">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/cu_bottom_icon_checked"
+        android:clickable="true"
+        android:src="@drawable/cu_bottom_icon_5"
+        android:layout_above="@+id/cu_bottom_nav"
+        app:tint="@color/white"
+        app:fabSize="normal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.99"
+        app:elevation="9dp">
+
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
