2주차 과제 (포켓CU) - onebarcode, sharedpreference, setting

--- a/app/src/main/res/layout/activity_cu_before_signup.xml
+++ b/app/src/main/res/layout/activity_cu_before_signup.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -16,10 +15,10 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/cu_login_text"
+            android:id="@+id/cu_before_signup_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="로그인"
+            android:text="회원 가입"
             android:textColor="@color/cu_text"
             android:textSize="17sp"
             android:textStyle="normal"
@@ -40,9 +39,8 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <ImageView
-        android:id="@+id/cu_login_top_img"
+        android:id="@+id/cu_before_signup_top_img"
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_marginTop="10dp"
@@ -52,7 +50,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cu_app_bar" />
 
     <Button
-        android:id="@+id/cu_login_naver_btn"
+        android:id="@+id/cu_before_signup_naver_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -67,10 +65,10 @@
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cu_login_top_img" />
+        app:layout_constraintTop_toBottomOf="@+id/cu_before_signup_top_img" />
 
     <Button
-        android:id="@+id/cu_login_kakao_btn"
+        android:id="@+id/cu_before_signup_kakao_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -85,19 +83,18 @@
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cu_login_naver_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/cu_before_signup_naver_btn" />
 
     <LinearLayout
-        android:id="@+id/cu_login_or_txt"
+        android:id="@+id/cu_before_signup_or_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        app:layout_constraintVertical_bias="0.7"
-        app:layout_constraintBottom_toTopOf="@+id/cu_login_id_edt"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cu_login_kakao_btn">
+        app:layout_constraintTop_toBottomOf="@+id/cu_before_signup_kakao_btn">
 
         <View
             android:layout_width="wrap_content"
@@ -124,107 +121,38 @@
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/cu_login_id_edt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="25dp"
-        android:backgroundTint="@color/cu_login_txt"
-        android:drawableLeft="@drawable/cu_login_edt_id_resize"
-        android:drawablePadding="8dp"
-        android:hint="아이디"
-        android:inputType="text"
-        android:textColor="@color/cu_text"
-        android:textColorHint="@color/cu_login_txt"
-        android:textSize="14sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/cu_login_pwd_edt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/cu_login_pwd_edt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="25dp"
-        android:layout_marginVertical="15dp"
-        android:backgroundTint="@color/cu_login_txt"
-        android:drawableLeft="@drawable/cu_login_edt_pwd_resize"
-        android:drawablePadding="8dp"
-        android:hint="비밀번호"
-        android:inputType="textPassword"
-        android:textColor="@color/cu_text"
-        android:textColorHint="@color/cu_login_txt"
-        android:textSize="14sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="25dp"
-        android:layout_marginVertical="28dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/cu_login_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageView
-            android:id="@+id/cu_login_auto_checked_btn"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/cu_login_auto_checked_icon" />
-
-        <TextView
-            android:id="@+id/cu_login_auto_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
-            android:text="자동로그인"
-            android:textColor="@color/cu_text"
-            android:textSize="15sp"
-            android:textStyle="normal" />
-
-    </LinearLayout>
-
     <Button
-        android:id="@+id/cu_login_btn"
+        android:id="@+id/cu_before_signup_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="25dp"
         android:background="@drawable/cu_login_btn"
         android:backgroundTint="@color/cu_bottom_icon_checked"
-        android:text="로그인"
+        android:text="회원가입"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/cu_login_findid_signup"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/cu_login_findid_signup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.93">
+        app:layout_constraintTop_toBottomOf="@+id/cu_before_signup_or_txt" />
+
+    <LinearLayout
+        android:id="@+id/cu_signup_already_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cu_before_signup_btn">
 
         <TextView
-            android:id="@+id/cu_login_findid_txt"
+            android:id="@+id/cu_before_signup_already_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="아이디 찾기/비밀번호 재설정"
+            android:text="이미 CU 회원 계정이 있으신가요?"
             android:textColor="@color/cu_login_findid_txt"
             android:textSize="14sp"
             android:textStyle="normal" />
@@ -236,10 +164,10 @@
             android:background="@color/cu_login_txt" />
 
         <TextView
-            android:id="@+id/cu_login_signup_txt"
+            android:id="@+id/cu_before_signup_login_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="회원가입"
+            android:text="로그인"
             android:textColor="@color/cu_bottom_icon_checked"
             android:textSize="14sp"
             android:textStyle="normal" />
