--- a/app/src/main/res/layout/activity_cu_bottom_nav.xml
+++ b/app/src/main/res/layout/activity_cu_bottom_nav.xml
@@ -26,6 +26,7 @@
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/cu_one_barcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/cu_bottom_icon_checked"
