--- a/app/src/main/res/layout/fragment_cu_topbanner2.xml
+++ b/app/src/main/res/layout/fragment_cu_topbanner2.xml
@@ -9,7 +9,7 @@
         android:id="@+id/cu_top_banner2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:src="@drawable/cu_top_banner_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
