--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -81,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:text="로그인 해주세요"
+            android:text="로그인"
             android:textColor="@color/cu_text"
             android:textSize="15sp"
             android:textStyle="normal"
@@ -421,11 +421,12 @@
 
             </HorizontalScrollView>
 
-            <androidx.viewpager2.widget.ViewPager2
+            <ImageView
                 android:id="@+id/cu_mid_banner"
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
                 android:layout_marginTop="15dp"
+                android:src="@drawable/cu_midbanner_1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
