--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,6 @@
     <color name="cu_login_kakao_txt">#3E2300</color>
     <color name="cu_login_txt">#CDCDCD</color>
     <color name="cu_login_findid_txt">#A1A1A1</color>
+    <color name="cu_signup_user_info">#333333</color>
 
 </resources>
