2주차 과제 보충 (포켓CU) - sp 관련 오류 해결, complete_signup

--- a/app/src/main/res/layout/activity_cu_login.xml
+++ b/app/src/main/res/layout/activity_cu_login.xml
@@ -133,8 +133,8 @@
         android:backgroundTint="@color/cu_login_txt"
         android:drawableLeft="@drawable/cu_login_edt_id_resize"
         android:drawablePadding="8dp"
-        android:hint="아이디"
-        android:inputType="text"
+        android:hint="아이디(휴대폰번호)"
+        android:inputType="number"
         android:textColor="@color/cu_text"
         android:textColorHint="@color/cu_login_txt"
         android:textSize="14sp"
