--- a/app/src/main/res/layout/activity_cu_selfauth.xml
+++ b/app/src/main/res/layout/activity_cu_selfauth.xml
@@ -121,6 +121,7 @@
         android:id="@+id/cu_selfauth_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingVertical="20dp"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/cu_bottom_icon_checked"
