--- a/app/src/main/res/layout/activity_cu_selfauth_check.xml
+++ b/app/src/main/res/layout/activity_cu_selfauth_check.xml
@@ -122,6 +122,7 @@
         android:id="@+id/cu_selfauth_retry_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingVertical="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="30dp"
         android:backgroundTint="@color/cu_bottom_icon_unchecked"
@@ -155,6 +156,7 @@
         android:id="@+id/cu_selfauth_complete_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingVertical="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="30dp"
         android:backgroundTint="@color/cu_bottom_icon_checked"
