--- a/app/src/main/res/layout/activity_cu_signup.xml
+++ b/app/src/main/res/layout/activity_cu_signup.xml
@@ -165,58 +165,95 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cu_signup_user_info">
 
-        <EditText
+        <TextView
+            android:id="@+id/cu_signup_id_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            android:text="아이디(휴대폰번호)"
+            android:textColor="@color/cu_bottom_icon_unchecked"
+            android:textSize="11sp"
+            android:textStyle="normal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/cu_signup_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="35dp"
             android:backgroundTint="@color/cu_login_txt"
-            android:hint="아이디"
+            android:hint="아이디(휴대폰번호)"
             android:inputType="text"
-            android:paddingHorizontal="10dp"
+            android:paddingVertical="10dp"
             android:textColor="@color/cu_text"
             android:textColorHint="@color/cu_login_txt"
             android:textSize="14sp"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cu_signup_id_txt" />
+
+        <TextView
+            android:id="@+id/cu_signup_pwd_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="30dp"
+            android:text="비밀번호를 입력해주세요."
+            android:textColor="@color/cu_bottom_icon_unchecked"
+            android:textSize="11sp"
+            android:textStyle="normal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cu_signup_id" />
 
         <EditText
             android:id="@+id/cu_signup_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="30dp"
             android:backgroundTint="@color/cu_login_txt"
-            android:hint="비밀번호 확인"
+            android:hint="비밀번호"
             android:inputType="textPassword"
-            android:paddingHorizontal="10dp"
             android:textColor="@color/cu_text"
             android:textColorHint="@color/cu_login_txt"
             android:textSize="14sp"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cu_signup_id" />
+            app:layout_constraintTop_toBottomOf="@+id/cu_signup_pwd_txt" />
+
+        <TextView
+            android:id="@+id/cu_signup_pwd_check_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="30dp"
+            android:text="비밀번호를 입력해주세요."
+            android:textColor="@color/cu_bottom_icon_unchecked"
+            android:textSize="11sp"
+            android:textStyle="normal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cu_signup_pwd" />
 
         <EditText
             android:id="@+id/cu_signup_pwd_check"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="30dp"
             android:backgroundTint="@color/cu_login_txt"
             android:hint="비밀번호 재확인"
             android:inputType="textPassword"
-            android:paddingHorizontal="10dp"
             android:textColor="@color/cu_text"
             android:textColorHint="@color/cu_login_txt"
             android:textSize="14sp"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cu_signup_pwd" />
+            app:layout_constraintTop_toBottomOf="@+id/cu_signup_pwd_check_txt" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -225,6 +262,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="25dp"
+        android:paddingVertical="20dp"
         android:backgroundTint="@color/cu_bottom_icon_checked"
         android:text="회원가입 완료"
         android:textColor="@color/white"
