3주차 과제 (포켓CU) - mycu, user_update

--- a/app/src/main/res/layout/activity_cu_event_roulette.xml
+++ b/app/src/main/res/layout/activity_cu_event_roulette.xml
@@ -121,14 +121,16 @@
             <ImageView
                 android:id="@+id/cu_event_roulette_img_1"
                 android:layout_width="match_parent"
-                android:layout_height="275dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
                 android:src="@drawable/cu_event_roulette_img_1"
                 app:layout_constraintTop_toBottomOf="@+id/cu_event_detail" />
 
             <ImageView
                 android:id="@+id/cu_event_roulette_img_2"
                 android:layout_width="match_parent"
-                android:layout_height="513dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
                 android:src="@drawable/cu_event_roulette_img_2"
                 app:layout_constraintTop_toBottomOf="@+id/cu_event_roulette_img_1" />
 
