--- a/app/src/main/res/layout/activity_cu_one_barcode.xml
+++ b/app/src/main/res/layout/activity_cu_one_barcode.xml
@@ -125,179 +125,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:paddingHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/cu_one_barcode_line">
-
-        <LinearLayout
-            android:id="@+id/cu_one_barcode_menu_all"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:id="@+id/cu_pointmarket"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:gravity="center"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:id="@+id/cu_pointmarket_img"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:src="@drawable/cu_one_barcode_pointmarket"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/cu_pointmarket_txt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="나의\n구매내역"
-                    android:textColor="@color/cu_text"
-                    android:textSize="13sp"
-                    android:textStyle="normal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cu_one_barcode_pointmarket" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/cu_buylist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:gravity="center"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-
-                app:layout_constraintStart_toEndOf="@+id/cu_pointmarket"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:id="@+id/cu_buylist_img"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:src="@drawable/cu_one_barcode_buylist"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/cu_buylist_txt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="나의\n구매내역"
-                    android:textColor="@color/cu_text"
-                    android:textSize="13sp"
-                    android:textStyle="normal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cu_one_barcode_pointmarket" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/cu_membership"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:gravity="center"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/cu_pointpw"
-                app:layout_constraintStart_toEndOf="@+id/cu_buylist"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:id="@+id/cu_membership_img"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:src="@drawable/cu_one_barcode_membership"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/cu_membership_txt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="멤버십\n카드관리"
-                    android:textColor="@color/cu_text"
-                    android:textSize="13sp"
-                    android:textStyle="normal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cu_one_barcode_pointmarket" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/cu_pointpw"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:gravity="center"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:id="@+id/cu_pointpw_img"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:src="@drawable/cu_one_barcode_pointpw"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/cu_pointpw_txt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="포인트\n비밀번호"
-                    android:textColor="@color/cu_text"
-                    android:textSize="13sp"
-                    android:textStyle="normal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cu_one_barcode_pointmarket" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <View
-        android:id="@+id/cu_one_barcode_line_2"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp"
-        android:background="@color/cu_line"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
-
-
     <ImageView
         android:id="@+id/cu_one_barcode_img"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
+        android:layout_marginTop="20dp"
         android:paddingHorizontal="20dp"
         android:src="@drawable/cu_one_barcode"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cu_one_barcode_line_2" />
+        app:layout_constraintTop_toBottomOf="@+id/cu_one_barcode_line" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
