--- a/app/src/main/res/layout/activity_cu_event_roulette.xml
+++ b/app/src/main/res/layout/activity_cu_event_roulette.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/cu_event_roulette_bottom"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".second_third_week.CU_event_roulette">
+    tools:context=".week3_hw.CU_event_roulette">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cu_app_bar"
