4주차 과제 (문어빵만들기) - UI 및 레이아웃 구성

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,7 @@
     <color name="cu_event_roulette_txt">#DD5B78</color>
     <color name="cu_event_roulette_check">#EEEEEE</color>
 
+    <color name="taco_main_bg">#FF999A</color>
+    <color name="taco_desk_bottom">#F09E38</color>
+
 </resources>
