4주차 과제 (문어빵 만들기) - 기능 구현

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,5 +26,6 @@
 
     <color name="taco_main_bg">#FF999A</color>
     <color name="taco_desk_bottom">#F09E38</color>
+    <color name="taco_game_over">#EB3223</color>
 
 </resources>
